--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/fwind4/big-ent-2.git"
   },
   "scripts": {
+    "sqlize": "node_modules/.bin/sequelize",
     "dev": "cross-env NODE_ENV=development node src/server",
     "start": "cross-env NODE_ENV=production node build/server",
     "prebuild": "rimraf build",
@@ -92,6 +93,10 @@
     "cross-env": "5.2.0",
     "express": "4.16.3",
     "fast-safe-stringify": "2.0.5",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0",
     "winston": "3.0.0"
   }
 }
