--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "body-parser": "1.18.3",
     "compression": "1.7.3",
     "cross-env": "5.2.0",
+    "dotenv": "^6.0.0",
     "express": "4.16.3",
     "fast-safe-stringify": "2.0.5",
     "pg": "^7.4.3",
