--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "dotenv": "^6.0.0",
     "express": "4.16.3",
     "fast-safe-stringify": "2.0.5",
+    "passport": "^0.4.0",
+    "passport-hash": "^0.6.1",
+    "password-hash": "^1.2.2",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.38.0",
