--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "password-hash": "^1.2.2",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
+    "react-admin": "^2.3.4",
     "sequelize": "^4.38.0",
     "sequelize-cli": "^4.0.0",
     "winston": "3.0.0"
